about and into photo no longer overlap at certain screen sizes

--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ html {
   font-family: 'Roboto', sans-serif;
   color: #ccd6f6;
   font-size: 3rem;
-  margin-top: 1rem;
 }
 
 .section-info {
